tato-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tato-api
  namespace: tato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tato-api
  template:
    metadata:
      labels:
        app: tato-api
    spec:
      containers:
        - name: tato-api
          image: ghcr.io/fiservojta/tato-be:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              memory: 512Mi
