tato-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tato-api
  namespace: tato
spec:
  type: ClusterIP
  selector:
    app: tato-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
