tato-backend/ingress-ip-prefix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tato-backend
  namespace: tato
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tato.coolcorners.org
      secretName: tato-app-tls
  rules:
    - host: tato.coolcorners.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tato-api
                port:
                  number: 80
